--- a/app/views/opinions/_side_nav.html.erb
+++ b/app/views/opinions/_side_nav.html.erb
@@ -1,11 +1,7 @@
 <div class="side-nav">
   <div class="current-user">
     <div class="picture">
-      <% if current_user[:Photo].nil? %>
-        <%= gravatar_for current_user, size: 50 %>
-      <% else %>
-        <%= image_tag current_user.Photo.thumb.url %>
-      <% end %>           
+    <%=same_user(@user)%>          
     </div>
     <h6><%= current_user.Fullname.upcase %></h6>
   </div>
