--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,11 +10,7 @@
   <div class="main-user-body">
     <div class="user-tweet">
       <div class="hero-img">
-     <% unless @user[:CoverImage].nil? %>
-   <%= image_tag @user.CoverImage.standard.url, class: 'photo-hero shadow-lg p-3' %>
-<% else %>
-   <img src="https://via.placeholder.com/150" alt="">
-<% end %>
+     <%= hero(@user) %>
       </div>
       <div class="user-body">
         <p class="user-body-header">ALL TWEETS</p>
@@ -28,18 +24,7 @@
             <h4><%= opinion.Author.Fullname.upcase %></h4>
             <span><%= opinion.Text %></span>
             <span class="like">
-            <% if opinion.likes.any? { |like| like.UserId == current_user.id }%>
-              <%= link_to unlike_path(opinion), method: :delete, class: 'user' do %>
-                <i class="fas fa-heart text-danger"></i>
-              <% end %>
-            <% else %>
-              <%= link_to like_path(opinion), class: 'user' do %>
-                <i class="fas fa-heart text-white"></i>
-              <% end %>
-            <% end %>
-            <% if opinion.likes.any? %>
-              <p><%= "#{pluralize(opinion.likes.size, 'like')}" %></p>
-            <% end %>
+         <%= like_opinion(opinion) %>
         </span>
             <div class="clear"></div>
           </div>
@@ -49,23 +34,9 @@
     <div  class="user-profile">
      <div class="profile-container">
         <div class="d-flex justify-content-center mt-5">
-  <% unless current_user.id == @user.id %>
-    <% if current_user.followed.any? { |person| person.followedId == @user.id }%>
-      <%= link_to unfollow_path(@user), method: :delete, class: "font-unfollow-icon" do %>
-        <i class="fas fa-minus-circle "></i>
-      <% end %>
-    <%else%>
-      <%= link_to follow_path(@user), class: "font-follow-icon" do %>
-        <i class="fas fa-plus-circle "></i>
-      <% end %>
-    <% end %>
- <% end %>
-<div class="picture ">
-  <% unless @user[:Photo].nil? %>
-    <%= image_tag @user.Photo.medium.url , class: "rounded-circle ml-3 mr-3" %>
-  <% else %>
-    <%= gravatar_for @user, size: 100 %>
-<% end %>
+         <%=followed(@follower)%>
+          <div class="picture ">
+            <%= user_img(@users) %>
           </div>
           <i class="fas fa-list text-primary pt-2"></i>
         </div>
@@ -99,13 +70,13 @@
           <p>FOLLOWED BY</p>
         </div>
         <div class="my-followers">
-  <% @followers.each do |follower| %>
-  <div class="follower-profile">
-    <div class="follower-avatar">
-      <%=follow_img(follower)%>
-      <h6><%= follower.follower.Fullname %></h6>
+     <% @followers.each do |follower| %>
+      <div class="follower-profile">
+        <div class="follower-avatar">
+           <%=follow_img(follower)%>
+        <h6><%= follower.follower.Fullname %></h6>
     </div>
- <%=render_follows(follower)%>
+     <%=render_follows(follower)%>
   </div>
 <% end %>
   </div>
